# cdx-imbalance-data

./: .gitignore  README.md  main.py  pyproject.toml  run_classification_test.py
data/: upi_ticker_map.json
data/dtcc_data/ppd_api_slices/CREDITS/2025-06-03/: CFTC_SLICE_CREDITS_2025_06_03_1.csv  CFTC_SLICE_CREDITS_2025_06_03_12.csv  CFTC_SLICE_CREDITS_2025_06_03_13.csv  CFTC_SLICE_CREDITS_2025_06_03_16.csv  CFTC_SLICE_CREDITS_2025_06_03_20.csv  CFTC_SLICE_CREDITS_2025_06_03_6.csv  CFTC_SLICE_CREDITS_2025_06_03_9.csv
data/dtcc_data/ppd_api_slices/CREDITS/2025-06-04/: CFTC_SLICE_CREDITS_2025_06_04_1.csv  CFTC_SLICE_CREDITS_2025_06_04_2.csv  CFTC_SLICE_CREDITS_2025_06_04_3.csv  CFTC_SLICE_CREDITS_2025_06_04_4.csv
data/dtcc_data/s3_eod_cumulative/CREDITS/2025-06-03/: CFTC_CUMULATIVE_CREDITS_2025_06_03.csv
data/dtcc_slices_ppd_api/CREDITS/2025-06-03/: CFTC_SLICE_CREDITS_2025_06_03_10.csv  CFTC_SLICE_CREDITS_2025_06_03_11.csv  CFTC_SLICE_CREDITS_2025_06_03_14.csv  CFTC_SLICE_CREDITS_2025_06_03_15.csv  CFTC_SLICE_CREDITS_2025_06_03_17.csv  CFTC_SLICE_CREDITS_2025_06_03_18.csv  CFTC_SLICE_CREDITS_2025_06_03_19.csv  CFTC_SLICE_CREDITS_2025_06_03_2.csv  CFTC_SLICE_CREDITS_2025_06_03_3.csv  CFTC_SLICE_CREDITS_2025_06_03_4.csv  CFTC_SLICE_CREDITS_2025_06_03_5.csv  CFTC_SLICE_CREDITS_2025_06_03_7.csv  CFTC_SLICE_CREDITS_2025_06_03_8.csv
src/cdx_imbalance_data/: __init__.py  bloomberg_connector.py  config.py  data_aggregator.py  dtcc_fetcher.py  economic_conversions.py  main.py  trade_classifier.py
